--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@code-dot-org/p5.play": "1.2.2-cdo",
     "canvas": "^1.6.11",
+    "ffmpeg-static": "2.3.0",
     "p5": "^0.7.1"
   }
 }
