--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-node_modules
+.bash_history
+.serverlessrc
+.aws
+.config
+.npm
+.serverless
 
 # Project-specific
-out.txt
-logs
-notes
 .awscredentials
-endpoints.json
-artifacts
+node_modules
+yarn-error.log
 
 # IDE Stuff
 **/.idea
@@ -15,12 +17,3 @@ artifacts
 # OS STUFF
 .DS_Store
 .tmp
-
-# Stuff from Docker volume
-.babel.json
-.bash_history
-.serverlessrc
-.aws
-.config
-.npm
-.serverless
