Documentation update, prefix destination_bucket with 'cdo-'

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 service: p5-replay-service
 
 custom:
-  destination_bucket: p5-replay-videos
+  destination_bucket: cdo-p5-replay-videos
 
 provider:
   name: aws
