major refactoring - use SAM instead of Serverless for sam local testing - only build `node_modules` within docker, deploy from host - remove compiled ffmpeg binary from repo - tweak ffmpeg settings for speed and compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@
 .serverless
 
 # Project-specific
-.awscredentials
-node_modules
+**/node_modules
 yarn-error.log
+.cache
+**/.yarn
+**/binaries
 
 # IDE Stuff
 **/.idea
