--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "docker run --rm -v $PWD:/wrk p5-replay/build-service /bin/bash -c 'cd /wrk && node /wrk/localTest.js'",
     "test-sam": "sam local generate-event s3 put | sam local invoke --template ../template.yml RenderFromS3",
-    "postinstall": "cd node_modules/@code-dot-org/p5.play; cp ./examples/lib/p5.js .",
     "deploy": "serverless deploy",
     "stack-destroy": "sls remove -v"
   },
@@ -18,7 +17,7 @@
   "dependencies": {
     "node-pre-gyp": "0.9.1",
     "canvas": "2.0.0-alpha.13",
-    "@code-dot-org/p5.play": "1.3.3-cdo",
+    "@code-dot-org/dance-party": "0.0.17",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
