--- a/src/package.json
+++ b/src/package.json
@@ -15,9 +15,10 @@
   "author": "Josh Lory <josh.lory@code.org>",
   "license": "Apache-2.0",
   "dependencies": {
-    "node-pre-gyp": "0.9.1",
-    "canvas": "2.0.0-alpha.13",
     "@code-dot-org/dance-party": "0.0.17",
+    "@code-dot-org/p5.play": "1.3.5-cdo",
+    "canvas": "2.0.0-alpha.13",
+    "node-pre-gyp": "0.9.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
