--- a/src/package.json
+++ b/src/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "@code-dot-org/dance-party": "0.0.23",
     "@code-dot-org/p5.play": "1.3.5-cdo",
+    "aws-sdk": "^2.350.0",
     "canvas": "2.0.0-alpha.13",
     "node-pre-gyp": "0.9.1",
     "request": "^2.88.0",
     "uuid": "^3.3.2"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
