--- a/src/package.json
+++ b/src/package.json
@@ -15,7 +15,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@code-dot-org/dance-party": "0.0.38",
+    "@code-dot-org/dance-party": "code-dot-org/dance-party#expose-effect-names",
     "@code-dot-org/p5.play": "1.3.8-cdo",
     "aws-sdk": "2.290.0",
     "aws-xray-sdk-core": "^2.0.1",
