--- a/src/package.json
+++ b/src/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "lint": "eslint --ext .js .",
     "test:unit": "tape test/unit/*.js",
-    "test": "yarn lint && docker run --rm -v $PWD:/wrk p5-replay/build-service /bin/bash -c 'cd /wrk && yarn test:unit'",
-    "test-sam": "sam local generate-event s3 put | sam local invoke --template ../template.yml RenderFromS3",
-    "deploy": "serverless deploy",
-    "stack-destroy": "sls remove -v"
+    "test": "yarn lint && yarn test:unit'"
   },
   "repository": {
     "type": "git",
