iterating on travis
iterating on travis

iterating on travis

iterating on travis

iterating on travis

iterating on travis

--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint --ext .js .",
     "test:unit": "tape test/unit/*.js",
-    "test": "yarn lint && yarn test:unit'"
+    "test": "yarn lint && yarn test:unit"
   },
   "repository": {
     "type": "git",
