--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: node_js
-
-services:
-  - docker
-
-node_js:
-  - 8.10.0
+node_js: 8.10.0
+services: docker
 
 cache:
   directories:
@@ -12,7 +8,7 @@ cache:
 
 before_install: bash build.sh
 before_script: cd src
-script: yarn test
+script: npm run test
 
 notifications:
   email: false
